RESOLVED FIXED185896
BytecodeGeneratorification shouldn't add a ValueProfile if the JIT is disabled.
https://bugs.webkit.org/show_bug.cgi?id=185896
Summary BytecodeGeneratorification shouldn't add a ValueProfile if the JIT is disabled.
Mark Lam
Reported 2018-05-22 17:49:02 PDT
Patch coming.
Attachments
proposed patch. (2.67 KB, patch)
2018-05-22 17:54 PDT, Mark Lam
saam: review+
Radar WebKit Bug Importer
Comment 1 2018-05-22 17:49:29 PDT
Mark Lam
Comment 2 2018-05-22 17:54:11 PDT
Created attachment 341052 [details] proposed patch.
Mark Lam
Comment 3 2018-05-22 20:12:18 PDT
Thanks for the review. Landed in r232100: <http://trac.webkit.org/r232100>.
Note You need to log in before you can comment on or make changes to this bug.