BytecodeGeneratorification shouldn't add a ValueProfile if the JIT is disabled. https://bugs.webkit.org/show_bug.cgi?id=185896 <rdar://problem/40471403>

Reviewed by Saam Barati.

JSTests:

* stress/regress-185896.js: Added.

Source/JavaScriptCore:

* bytecode/BytecodeGeneratorification.cpp:
(JSC::BytecodeGeneratorification::run):



Canonical link: https://commits.webkit.org/201346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232100 268f45cc-cd09-0410-ab3c-d52691b4dbfc